--- a/assets/style.css
+++ b/assets/style.css
@@ -136,7 +136,12 @@ body {
 .img-fluid{
 	width: auto;
 	height: auto;
+	object-fit: cover;
 }
+
+img{width:auto;
+height:auto;}
+
 
 .quote {
 	font-family: 'Spectral';
