--- a/assets/style.css
+++ b/assets/style.css
@@ -134,7 +134,14 @@ body {
 	font-size: 24px;
 }
 .img-fluid{
-	
+	width:100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+img{
+	width: 100%;
+	height: 100%;
 	object-fit: cover;
 }
 
