--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@ body {
 	font-family: 'Inter';
 	font-style: normal;
 }
-.top-header {
+header {
 	background-color: white;
 	position: sticky;
 	top:0;
@@ -18,7 +18,7 @@ body {
 	align-items: center;
 }
 
-.top-header .name {
+header .name {
 	font-size: 26px;
 }
 
@@ -205,7 +205,7 @@ img{
 	z-index: 1;
 }
 
-#contact {
+footer {
 	margin: auto;
 	background-color: #D8D3A8 ;
 	position: relative;
@@ -213,7 +213,7 @@ img{
 	padding-block: 100px;
 }
 
-#contact .container {
+footer .container {
 	display: flex;
 }
 .picture.right::before {
@@ -263,7 +263,7 @@ input[type="submit"] {
 	.picture {
 		flex : 2;
 	}
-	#about, #contact .container {
+	#about, footer .container {
 		align-items: center;
 	}
 	.about-me__title {
@@ -318,10 +318,10 @@ input[type="submit"] {
 		z-index: 0;
 	}
 
-	#contact .container {
+	footer .container {
 		flex-direction: column;
 	}
-	#contact .picture.right {
+	footer .picture.right {
 		margin-top: 1em;
 	}
 	.picture.right::before {
@@ -335,15 +335,15 @@ input[type="submit"] {
 }
 
 @media all and (max-width: 650px) {
-	.top-header {
+	header {
 		flex-direction: column;
 		padding-inline: 0;
 	}
-	.top-header .nav, .top-header .nav ul {
+	header .nav, header .nav ul {
 		width: 100%;
 		padding: 0 0 0 0;
 	}
-	.top-header .nav li {
+	header .nav li {
 		flex: 1;
 		padding-block: 1em;
 		text-align: center;
@@ -357,7 +357,7 @@ input[type="submit"] {
 	.service {
 		max-width: 90%;
 	}
-	#about, #contact {
+	#about, footer {
 		padding-inline: 2em;
 		padding-block: 2em;
 	}
